--- a/Graphs/CMakeLists.txt
+++ b/Graphs/CMakeLists.txt
@@ -1,19 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(Graphs)
 
-include_directories(
-include
-  ${catkin_INCLUDE_DIRS}
-  # ${PROJECT_NAME} include
+include_directories(include)
+add_library(mylib
+  ${CMAKE_SOURCE_DIR}/src/graph.cpp
 )
 
-ADD_LIBRARY(mylib
-  src/graph.cpp
-)
+add_executable(graph_bin src/main.cpp)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
-
-target_link_libraries(${PROJECT_NAME}
-  ${catkin_LIBRARIES}
+target_link_libraries(graph_bin
   mylib
 )
