--- a/Graphs/CMakeLists.txt
+++ b/Graphs/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(Graphs)
 
+set(CMAKE_CXX_STANDARD 11)
+
 include_directories(
-include
-  ${catkin_INCLUDE_DIRS}
-  # ${PROJECT_NAME} include
+  include
 )
 
 ADD_LIBRARY(mylib
